replace g2 with echarts

--- a/deepfence_frontend/apps/dashboard/package.json
+++ b/deepfence_frontend/apps/dashboard/package.json
@@ -17,27 +17,25 @@
     "codegen:clean": "rm -rf ./src/api/generated"
   },
   "dependencies": {
-    "@ant-design/plots": "^1.2.5",
     "@antv/g6": "^4.8.5",
     "@radix-ui/react-navigation-menu": "^1.1.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/react-virtualized": "^9.21.21",
     "classnames": "^2.3.2",
+    "echarts": "^5.4.1",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.0",
     "react-use": "^17.4.0",
-    "react-virtualized": "^9.22.3",
     "tailwind-merge": "^1.9.0",
     "ui-components": "workspace:*"
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.5.2",
     "@playwright/test": "^1.30.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/lodash-es": "^4.17.6",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
