--- a/deepfence_frontend/apps/dashboard/package.json
+++ b/deepfence_frontend/apps/dashboard/package.json
@@ -20,6 +20,7 @@
     "@antv/g6": "^4.8.5",
     "@radix-ui/react-navigation-menu": "^1.1.1",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.7",
     "echarts": "^5.4.1",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
