discovery build fix

--- a/deepfence_agent/tools/apache/scope/docker/Dockerfile.cloud-agent
+++ b/deepfence_agent/tools/apache/scope/docker/Dockerfile.cloud-agent
@@ -6,7 +6,7 @@ ENV CHECKPOINT_DISABLE=true DOCKERVERSION=20.10.8 MGMT_CONSOLE_PORT=443
 
 WORKDIR /home/deepfence
 RUN apt-get update
-RUN apt-get install --no-cache --update bash conntrack-tools iproute2 util-linux curl bind-tools grep tar podman git wget \
+RUN apt-get install bash conntrack-tools iproute2 util-linux curl bind-tools grep tar podman git wget \
     && curl -fsSLO https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKERVERSION}.tgz \
     && tar xzvf docker-${DOCKERVERSION}.tgz --strip 1 -C /usr/local/bin docker/docker \
     && rm docker-${DOCKERVERSION}.tgz \
@@ -23,8 +23,8 @@ RUN apt-get install --no-cache --update bash conntrack-tools iproute2 util-linux
     && rm -f crictl-$VERSION-linux-amd64.tar.gz \
 	&& rm -rf /var/cache/apk/* \
     && /bin/sh -c "$(curl -fsSL https://raw.githubusercontent.com/turbot/steampipe/main/install.sh)" \
-    && addgroup -S deepfence && adduser -S deepfence -G deepfence \
-    && apt-get install fluent-bit --repository=https://dl-cdn.alpinelinux.org/alpine/edge/testing
+    && useradd -rm -d /home/deepfence -s /bin/bash -g root -G sudo -u 1001 deepfence \
+    && curl https://raw.githubusercontent.com/fluent/fluent-bit/master/install.sh | sh
 
 COPY fluentbit/out_deepfence/out_deepfence.so /opt/td-agent-bit/bin/
 USER deepfence
