--- a/deepfence_agent/tools/apache/scope/docker/Dockerfile.cloud-agent
+++ b/deepfence_agent/tools/apache/scope/docker/Dockerfile.cloud-agent
@@ -6,13 +6,14 @@ ENV CHECKPOINT_DISABLE=true DOCKERVERSION=20.10.8 MGMT_CONSOLE_PORT=443
 
 WORKDIR /home/deepfence
 RUN apt-get update
-RUN apt-get install bash conntrack-tools iproute2 util-linux curl bind-tools grep tar podman git wget
-RUN curl -fsSLO https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKERVERSION}.tgz
-RUN tar xzvf docker-${DOCKERVERSION}.tgz --strip 1 -C /usr/local/bin docker/docker
-RUN rm docker-${DOCKERVERSION}.tgz
-RUN curl -fsSLOk https://github.com/deepfence/vessel/releases/download/v0.9.0/vessel_v0.9.0_linux_amd64.tar.gz
-RUN tar -xzf vessel_v0.9.0_linux_amd64.tar.gz
-RUN mv vessel /usr/local/bin/
+RUN apt-get install -y bash conntrack iproute2 util-linux curl grep tar git wget \
+    && apt-get -y --allow-unauthenticated install podman \
+    && curl -fsSLO https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKERVERSION}.tgz \
+    && tar xzvf docker-${DOCKERVERSION}.tgz --strip 1 -C /usr/local/bin docker/docker \
+    && rm docker-${DOCKERVERSION}.tgz \
+    && curl -fsSLOk https://github.com/deepfence/vessel/releases/download/v0.9.0/vessel_v0.9.0_linux_amd64.tar.gz \
+    && tar -xzf vessel_v0.9.0_linux_amd64.tar.gz \
+    && mv vessel /usr/local/bin/ \
     && rm -rf vessel_v0.9.0_linux_amd64.tar.gz \
     && curl -fsSLOk https://github.com/containerd/nerdctl/releases/download/v1.1.0/nerdctl-1.1.0-linux-amd64.tar.gz \
     && tar Cxzvvf /usr/local/bin nerdctl-1.1.0-linux-amd64.tar.gz \
@@ -21,10 +22,15 @@ RUN mv vessel /usr/local/bin/
     && curl -L https://github.com/kubernetes-sigs/cri-tools/releases/download/$VERSION/crictl-${VERSION}-linux-amd64.tar.gz --output crictl-${VERSION}-linux-amd64.tar.gz \
     && tar zxvf crictl-$VERSION-linux-amd64.tar.gz -C /usr/local/bin \
     && rm -f crictl-$VERSION-linux-amd64.tar.gz \
-	&& rm -rf /var/cache/apk/*
-RUN /bin/sh -c "$(curl -fsSL https://raw.githubusercontent.com/turbot/steampipe/main/install.sh)"
-RUN useradd -rm -d /home/deepfence -s /bin/bash -g root -G sudo -u 1001 deepfence
-    && curl https://raw.githubusercontent.com/fluent/fluent-bit/master/install.sh | sh
+	&& rm -rf /var/cache/apk/* \
+    && /bin/sh -c "$(curl -fsSL https://raw.githubusercontent.com/turbot/steampipe/main/install.sh)" \
+    && useradd -rm -d /home/deepfence -s /bin/bash -g root -G sudo -u 1001 deepfence
+
+# Installing FluentBit
+RUN wget -qO - https://packages.fluentbit.io/fluentbit.key | apt-key add - \
+    && echo "deb https://packages.fluentbit.io/debian/buster buster main " >> /etc/apt/sources.list \
+    && apt-get update --allow-insecure-repositories \
+    && apt-get install -y td-agent-bit=1.6.10 && mkdir -p /etc/td-agent-bit/
 
 COPY fluentbit/out_deepfence/out_deepfence.so /opt/td-agent-bit/bin/
 USER deepfence
