--- a/deepfence_agent/tools/apache/scope/docker/Dockerfile.cloud-agent
+++ b/deepfence_agent/tools/apache/scope/docker/Dockerfile.cloud-agent
@@ -6,7 +6,7 @@ ENV CHECKPOINT_DISABLE=true DOCKERVERSION=20.10.8 MGMT_CONSOLE_PORT=443
 
 WORKDIR /home/deepfence
 RUN apt-get update
-RUN apt-get install -y bash conntrack iproute2 util-linux curl grep tar git wget top \
+RUN apt-get install -y bash conntrack iproute2 util-linux curl grep tar git wget htop \
     && apt-get -y --allow-unauthenticated install podman \
     && curl -fsSLO https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKERVERSION}.tgz \
     && tar xzvf docker-${DOCKERVERSION}.tgz --strip 1 -C /usr/local/bin docker/docker \
