Api to mask, unmask, delete, notify scan results #725 Api to get sbom

--- a/deployment-scripts/docker-compose.yml
+++ b/deployment-scripts/docker-compose.yml
@@ -180,6 +180,7 @@ services:
     environment:
       <<: *common-creds
       ELASTICSEARCH_SCHEME: "http"
+      DEEPFENCE_ACCESS_TOKEN_EXPIRY_MINUTES: 1440
     networks:
       - deepfence_net
     depends_on:
