--- a/deepfence_agent/tools/apache/scope/docker/fluent-bit.conf
+++ b/deepfence_agent/tools/apache/scope/docker/fluent-bit.conf
@@ -25,12 +25,12 @@
     # Parsers File
     # ============
     # specify an optional 'Parsers' configuration file
-    parsers_file /etc/fluent-bit/parsers.conf
+    parsers_file /etc/td-agent-bit/fluentbit-parsers.conf
 
     # Plugins File
     # ============
     # specify an optional 'Plugins' configuration file to load external plugins.
-    plugins_file /etc/fluent-bit/plugins.conf
+    plugins_file /etc/td-agent-bit/cluster_agent_plugin.conf
 
     # HTTP Server
     # ===========
