--- a/deepfence_agent/tools/apache/scope/docker/fluent-bit.conf
+++ b/deepfence_agent/tools/apache/scope/docker/fluent-bit.conf
@@ -56,7 +56,7 @@
     # ------------
     # absolute file system path to store filesystem data buffers (chunks).
     #
-    storage.path /root/fluentbit/chunks/
+    storage.path /var/run/fluentbit/chunks/
 
     # storage.sync
     # ------------
