--- a/deepfence_agent/tools/apache/deepfence/supervisord_cluster_agent.conf
+++ b/deepfence_agent/tools/apache/deepfence/supervisord_cluster_agent.conf
@@ -22,7 +22,7 @@ environment=SCOPE_HOSTNAME=${SCOPE_HOSTNAME}
 command=/opt/td-agent-bit/bin/td-agent-bit -c /etc/td-agent-bit/td-agent-bit.conf
 numprocs=1
 autostart=true
-autorestart=true
+autorestart=false
 startsecs=0
 stopwaitsecs=30
 killasgroup=true
