--- a/deepfence_agent/tools/apache/scope/docker/fluent-bit.conf
+++ b/deepfence_agent/tools/apache/scope/docker/fluent-bit.conf
@@ -83,7 +83,7 @@
 
 [INPUT]
     Name tail
-    Path /var/log/deepfence/compliance/*.log
+    Path /var/log/compliance/compliance-scan/*.log
     Tag compliance-scan
     storage.type filesystem
     Buffer_Chunk_Size 4K
@@ -95,7 +95,7 @@
 
 [INPUT]
     Name tail
-    Path /var/log/deepfence/compliance-scan-logs/*.log
+    Path /var/log/compliance/compliance-status/status.log
     Tag compliance-scan-logs
     storage.type filesystem
     Buffer_Chunk_Size 4K
