--- a/deepfence_agent/tools/apache/scope/docker/fluent-bit.conf
+++ b/deepfence_agent/tools/apache/scope/docker/fluent-bit.conf
@@ -7,7 +7,7 @@
     # Daemon
     # ======
     # instruct Fluent Bit to run in foreground or background mode.
-    daemon       On
+    daemon       Off
 
     # Log_Level
     # =========
@@ -20,7 +20,7 @@
     # - trace
     #
     # by default 'info' is set, that means it includes 'error' and 'warning'.
-    log_level    warning
+    log_level   info
 
     # Parsers File
     # ============
