--- a/deepfence_frontend/apps/dashboard/package.json
+++ b/deepfence_frontend/apps/dashboard/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.0",
     "react-use": "^17.4.0",
+    "sonner": "^0.1.3",
     "tailwind-merge": "^1.9.0",
     "ui-components": "workspace:*"
   },
