KSPM V2 with start scan, results and status api https://github.com/deepfence/ThreatMapper/issues/905 (#912)
Compliance Scan on Kubernetes

--- a/deepfence_agent/tools/apache/scope/docker/fluent-bit.conf
+++ b/deepfence_agent/tools/apache/scope/docker/fluent-bit.conf
@@ -7,7 +7,7 @@
     # Daemon
     # ======
     # instruct Fluent Bit to run in foreground or background mode.
-    daemon       On
+    daemon       Off
 
     # Log_Level
     # =========
@@ -20,17 +20,17 @@
     # - trace
     #
     # by default 'info' is set, that means it includes 'error' and 'warning'.
-    log_level    warning
+    log_level   info
 
     # Parsers File
     # ============
     # specify an optional 'Parsers' configuration file
-    parsers_file /etc/fluent-bit/parsers.conf
+    parsers_file /etc/td-agent-bit/fluentbit-parsers.conf
 
     # Plugins File
     # ============
     # specify an optional 'Plugins' configuration file to load external plugins.
-    plugins_file /etc/fluent-bit/plugins.conf
+    plugins_file /etc/td-agent-bit/cluster_agent_plugin.conf
 
     # HTTP Server
     # ===========
@@ -56,7 +56,7 @@
     # ------------
     # absolute file system path to store filesystem data buffers (chunks).
     #
-    storage.path /root/fluentbit/chunks/
+    storage.path /var/run/fluentbit/chunks/
 
     # storage.sync
     # ------------
@@ -83,7 +83,7 @@
 
 [INPUT]
     Name tail
-    Path /var/log/deepfence/compliance/*.log
+    Path /var/log/compliance/compliance-scan/*.log
     Tag compliance-scan
     storage.type filesystem
     Buffer_Chunk_Size 4K
@@ -95,7 +95,7 @@
 
 [INPUT]
     Name tail
-    Path /var/log/deepfence/compliance-scan-logs/*.log
+    Path /var/log/compliance/compliance-status/status.log
     Tag compliance-scan-logs
     storage.type filesystem
     Buffer_Chunk_Size 4K
