--- a/deepfence_agent/tools/apache/scope/docker/Dockerfile.cloud-agent
+++ b/deepfence_agent/tools/apache/scope/docker/Dockerfile.cloud-agent
@@ -1,11 +1,13 @@
-FROM alpine:3.17.1
+FROM debian:bullseye-slim
 LABEL maintainer="Deepfence Inc"
 LABEL deepfence.role=system
 
 ENV CHECKPOINT_DISABLE=true DOCKERVERSION=20.10.8 MGMT_CONSOLE_PORT=443
 
 WORKDIR /home/deepfence
-RUN apk add --no-cache --update bash conntrack-tools iproute2 util-linux curl bind-tools grep tar podman git wget \
+RUN apt-get update
+RUN apt-get install -y bash conntrack iproute2 util-linux curl grep tar git wget supervisor gettext htop vim \
+    && apt-get -y --allow-unauthenticated install podman \
     && curl -fsSLO https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKERVERSION}.tgz \
     && tar xzvf docker-${DOCKERVERSION}.tgz --strip 1 -C /usr/local/bin docker/docker \
     && rm docker-${DOCKERVERSION}.tgz \
@@ -22,16 +24,26 @@ RUN apk add --no-cache --update bash conntrack-tools iproute2 util-linux curl bi
     && rm -f crictl-$VERSION-linux-amd64.tar.gz \
 	&& rm -rf /var/cache/apk/* \
     && /bin/sh -c "$(curl -fsSL https://raw.githubusercontent.com/turbot/steampipe/main/install.sh)" \
-    && addgroup -S deepfence && adduser -S deepfence -G deepfence \
-    && apk add fluent-bit --repository=https://dl-cdn.alpinelinux.org/alpine/edge/testing
+    && useradd -rm -d /home/deepfence -s /bin/bash -g root -G sudo -u 1001 deepfence
 
+# Installing FluentBit
+RUN wget -qO - https://packages.fluentbit.io/fluentbit.key | apt-key add - \
+    && echo "deb https://packages.fluentbit.io/debian/buster buster main " >> /etc/apt/sources.list \
+    && apt-get update --allow-insecure-repositories \
+    && apt-get install -y td-agent-bit=1.6.10 && mkdir -p /etc/td-agent-bit/
+
+COPY fluentbit/* /etc/td-agent-bit/
+COPY scope/docker/fluent-bit.conf /etc/td-agent-bit/td-agent-bit.conf
 COPY fluentbit/out_deepfence/out_deepfence.so /opt/td-agent-bit/bin/
 USER deepfence
 COPY scope/docker/deepfence_exe /home/deepfence/
+COPY deepfence/supervisord_cluster_agent.conf /home/deepfence/supervisord-temp.conf
 
 WORKDIR /opt/steampipe
 USER root
-RUN chown -R deepfence /opt/steampipe /home/deepfence/deepfence_exe
+COPY scope/probe/kubernetes/kubeconfig /home/deepfence/.kube/config
+COPY scope/probe/kubernetes/token.sh /home/deepfence/token.sh
+RUN chown -R deepfence /opt/ /home/deepfence /var/log /var/run/ /etc/td-agent-bit/
 
 USER deepfence
 RUN steampipe plugin install steampipe \
