--- a/deployment-scripts/docker-compose.yml
+++ b/deployment-scripts/docker-compose.yml
@@ -86,7 +86,7 @@ services:
     environment:
       <<: *common-creds
       NEO4J_dbms_memory_pagecache_size: 2600m
-      NEO4J_dbms.memory.heap.initial_size: 3800m
+      NEO4J_dbms_memory_heap_initial__size: 3800m
       NEO4J_dbms_memory_heap_max__size: 3800m
       NEO4JLABS_PLUGINS: '["apoc"]'
     ports:
