Option to add namespace prefix in minio expose url #725

--- a/deployment-scripts/docker-compose.yml
+++ b/deployment-scripts/docker-compose.yml
@@ -192,6 +192,7 @@ services:
       - "8080:8080"
       - "127.0.0.1:8081:8081"
     volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
       - /etc/docker/certs.d:/etc/docker/certs.d:ro
     logging:
       driver: "json-file"
