--- a/.gitmodules
+++ b/.gitmodules
@@ -21,5 +21,5 @@
 [submodule "deepfence_agent/plugins/YaraHunter"]
 	path = deepfence_agent/plugins/YaraHunter
 	url = git@github.com:deepfence/YaraHunter.git
-	branch = v2-rc1
-# 	branch = kafka-rest
+# 	branch = v2-rc1
+	branch = kafka-rest
