Add watchtower to automatically update console

--- a/deployment-scripts/docker-compose-selfupdating.yml
+++ b/deployment-scripts/docker-compose-selfupdating.yml
@@ -305,6 +305,15 @@ services:
     networks:
       - deepfence_net
 
+  watchtower:
+    image: containrrr/watchtower
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    environment:
+      WATCHTOWER_POLL_INTERVAL: 60
+
+
+
 volumes:
   deepfence_data:
     driver: local
