--- a/deepfence_frontend/package.json
+++ b/deepfence_frontend/package.json
@@ -22,8 +22,5 @@
   "engines": {
     "node": ">=18.0.0"
   },
-  "packageManager": "pnpm@7.17.1",
-  "dependencies": {
-    "moment": "^2.29.4"
-  }
+  "packageManager": "pnpm@7.17.1"
 }
