--- a/deployment-scripts/helm-charts/deepfence-agent/templates/cluster_role.yaml
+++ b/deployment-scripts/helm-charts/deepfence-agent/templates/cluster_role.yaml
@@ -119,3 +119,9 @@ rules:
       - get
       - list
       - watch
+  - apiGroups:
+      - apiextensions.k8s.io
+    resources:
+      - customresourcedefinitions
+    verbs:
+      - list
