Agent diagnostic logs #725

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -117,7 +117,7 @@ backend deepfence-server-8080
 backend deepfence-file-server-9000
     mode http
 
-    acl valid_http_method method GET HEAD OPTIONS
+    acl valid_http_method method GET PUT HEAD OPTIONS
     http-request deny if ! valid_http_method
 
     http-request replace-path /file-server(.*) \1
