agent: Automatic upgrades
This change introduces the store component for serving agent binaries
and the updatemon service which periodically checks for availability of
updates.

--- a/deepfence_agent/.gitignore
+++ b/deepfence_agent/.gitignore
@@ -4,3 +4,14 @@
 .idea/
 .vscode/
 .DS_Store
+
+# Binaries
+deepfence_compliance_check
+agentAuth
+getCloudInstanceId
+deepfence
+deepfence_exe
+deepfenceutil
+
+# Binary archives
+*.tar.zst
