--- a/deepfence_backend/dockerify/haproxy/haproxy.cfg
+++ b/deepfence_backend/dockerify/haproxy/haproxy.cfg
@@ -68,6 +68,9 @@ frontend port_443
     acl is_ingest path -i -m beg /ingest
     use_backend deepfence-rest-proxy-8082 if is_ingest
 
+    acl is_store path -i -m beg /store
+    use_backend store-8091 if is_store
+
     default_backend deepfence-ui-4042
 
 backend deepfence-ui-4042
@@ -211,6 +214,33 @@ backend deepfence-rest-proxy-8082
     acl is_default_customer_id str("${CUSTOMER_UNIQUE_ID}") -m len 0
     http-request set-path %[path]-"${CUSTOMER_UNIQUE_ID}" if !is_default_customer_id
     server s1 ${KAFKA_REST_PROXY}
+
+backend store-8091
+    mode http
+    acl is_dev_build str("${IS_DEV_BUILD}") -m str "true"
+    # CORS
+    http-response set-header Access-Control-Allow-Origin "*" if is_dev_build
+    http-response set-header Access-Control-Allow-Headers "*" if is_dev_build
+    http-response set-header Access-Control-Expose-Headers "*" if is_dev_build
+    http-response set-header Access-Control-Allow-Methods "*" if is_dev_build
+    http-response set-header Access-Control-Allow-Credentials "*" if is_dev_build
+    http-response set-header Access-Control-Max-Age "*" if is_dev_build
+    http-response set-header Cross-Origin-Resource-Policy "cross-origin" if is_dev_build
+    http-response set-header Cross-Origin-Opener-Policy "unsafe-none" if is_dev_build
+    http-response set-header Cross-Origin-Embedder-Policy "unsafe-none" if is_dev_build
+    # Security Headers
+    http-response del-header Access-Control-Allow-Origin unless is_dev_build
+    http-response set-header X-Frame-Options "SAMEORIGIN" unless is_dev_build
+    http-response set-header X-Content-Type-Options "nosniff" unless is_dev_build
+    http-response set-header X-XSS-Protection "1; mode=block" unless is_dev_build
+    http-response set-header Strict-Transport-Security "max-age=31536000; includeSubDomains" unless is_dev_build
+    http-response set-header Cross-Origin-Resource-Policy "same-origin" unless is_dev_build
+    http-response set-header Cross-Origin-Opener-Policy "same-origin" unless is_dev_build
+    http-response set-header Cross-Origin-Embedder-Policy "require-corp" unless is_dev_build
+    # http-response set-header Referrer-Policy "strict-origin-when-cross-origin"
+    # http-response set-header Content-Security-Policy "default-src 'self'"
+    # http-response set-header X-Permitted-Cross-Domain-Policies "none"
+    server s1 ${STORE_SERVICE_HOST}:${STORE_SERVICE_PORT}
 
 backend options_method_handler
     mode http
