--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,7 @@
 	path = deepfence_agent/plugins/YaraHunter
 	url = git@github.com:deepfence/YaraHunter.git
 	branch = v2
+[submodule "deepfence_agent/plugins/yara-rules"]
+	path = deepfence_agent/plugins/yara-rules
+	url = https://github.com/deepfence/yara-rules
+	branch = main
